--- a/Budfirmex/src/app/buildings/components/machines/machines.component.html
+++ b/Budfirmex/src/app/buildings/components/machines/machines.component.html
@@ -1,3 +1,4 @@
+<app-machine-modal></app-machine-modal>
 <p class="title-machines my-3">Maszyny</p>
 <div class="table-responsive">
     <table class="table table-borderless">
