--- a/Budfirmex/src/app/buildings/components/operators/operators.component.html
+++ b/Budfirmex/src/app/buildings/components/operators/operators.component.html
@@ -1,3 +1,4 @@
+<app-operator-modal></app-operator-modal>
 <p class="title-operators my-3">Operatorzy</p>
 <div class="table-responsive">
     <table class="table table-borderless">
