--- a/Budfirmex/src/app/buildings/components/stuff/stuff.component.html
+++ b/Budfirmex/src/app/buildings/components/stuff/stuff.component.html
@@ -1,3 +1,4 @@
+<app-stuff-modal></app-stuff-modal>
 <p class="title-stuff my-3">Materiały</p>
 <div class="table-responsive">
     <table class="table table-borderless">
