--- a/Budfirmex/src/app/buildings/components/works/works.component.html
+++ b/Budfirmex/src/app/buildings/components/works/works.component.html
@@ -1,3 +1,4 @@
+<app-work-modal></app-work-modal>
 <p class="title-works my-3">Roboty</p>
 <div class="table-responsive">
     <table class="table table-borderless">
