--- a/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
+++ b/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
@@ -9,8 +9,7 @@
 
         <button type="button" class="btn btn-lg btn-warning">Aktywne</button>
         <button type="button" class="btn btn-lg btn-warning">Zakończone</button>
-        <button type="button" class="btn btn-lg btn-warning float-md-end" data-bs-toggle="modal"
-            data-bs-target="new-building-modal">Dodaj nową budowę</button>
+        <app-new-building></app-new-building>
         <div class="row my-3">
             <div class="col-md-12 bg-white rounded">
                 <app-my-buildings></app-my-buildings>
