--- a/Budfirmex/src/app/buildings/components/workers/workers.component.html
+++ b/Budfirmex/src/app/buildings/components/workers/workers.component.html
@@ -1,3 +1,4 @@
+<app-worker-modal></app-worker-modal>
 <p class="title-workers my-3">Robotnicy</p>
 <div class="table-responsive">
     <table class="table table-borderless">
@@ -17,4 +18,3 @@
         </tbody>
     </table>
 </div>
-
