--- a/Budfirmex/src/app/buildings/modals/machine/machine-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/machine/machine-modal.component.html
@@ -1,17 +1,74 @@
-<div class="modal fade" id="new-building-modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="ModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <div class="modal-title" id="modal-basic-title">
+      <h4>Dodaj maszynę</h4>
+      <h5>Podaj informacje o pracującej maszynie, jej operatorze i zakresie wykonanych prac.</h5>
     </div>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="number_machine">Numer maszyny</label>
+        <select id="number_machine" class="form-control">
+          <option></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="type_machine">Typ maszyny</label>
+        <input type="text" id="type_machine" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="power">Moc w KM</label>
+        <input type="text" id="power" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="operator">Operator</label>
+        <select id="operator" class="form-control">
+          <option></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="rating">Ocena jakości robót</label>
+        <select id="rating" class="form-control">
+          <option></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="fuel">Zatankowane paliwo w litrach</label>
+        <input type="text" id="fuel" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="starting_counter">Początkowy stan licznika</label>
+        <input type="text" id="starting_counter" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="ending_counter">Końcowy stan licznika</label>
+        <input type="text" id="ending_counter" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="daily_task">Operator</label>
+        <select id="operator" class="form-control">
+          <option></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="comments">Uwagi</label>
+        <textarea class="form-control" id="comments" rows="3"></textarea>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Zapisz</button>
+  </div>
+</ng-template>
+
+
+<button type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg"
+    width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+    <path
+      d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+  </svg>
+</button>
