--- a/Budfirmex/src/app/buildings/modals/stuff/stuff-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/stuff/stuff-modal.component.html
@@ -1,17 +1,41 @@
-<div class="modal fade" id="new-building-modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="ModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <div class="modal-title" id="modal-basic-title">
+      <h4>Dodaj materiał</h4>
+      <h5>Podaj informacje o rodzaju i ilości wbudowanego tego dnia materiału.</h5>
     </div>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="name_stuff">Nazwa materiału</label>
+        <select id="name_stuff" class="form-control">
+          <option></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="unit">Jednostka</label>
+        <select id="unit" class="form-control">
+          <option></option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="quantity">Ilość</label>
+        <input type="text" id="harmful_hours" class="form-control">
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Zapisz</button>
+  </div>
+</ng-template>
+
+<button type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg"
+    width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+    <path
+      d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+  </svg>
+</button>
