--- a/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
+++ b/Budfirmex/src/app/dashboard/modals/new-building/new-building-modal.component.html
@@ -1,17 +1,43 @@
-<div class="modal fade" id="new-building-modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="ModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <div class="modal-title" id="modal-basic-title">
+      <h4>Dodaj nową budowę</h4>
+      <h5>Uzupenij zestaw danych po czym przejdź do karty budowy.</h5>
     </div>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="road_name">Nazwa drogi</label>
+        <input type="text" id="road_name" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="location">Lokalizacja</label>
+        <input type="text" id="location" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="start_date">Planowany termin rozpoczęcia</label>
+        <input type="date" id="start_date" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="end_date">Planowany termin zakończenia</label>
+        <input type="text" id="end_date" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="engineers">Inżynierowie budowy</label>
+        <select id="engineers" class="form-control">
+          <option></option>
+        </select>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Zapisz</button>
+  </div>
+</ng-template>
+
+<button type="button" class="btn btn-lg btn-warning float-md-end" data-bs-toggle="modal"
+  data-bs-target="new-building-modal" (click)="open(content)">Dodaj nową budowę</button>
