--- a/Budfirmex/src/app/root/components/layout/layout.component.html
+++ b/Budfirmex/src/app/root/components/layout/layout.component.html
@@ -1,7 +1,15 @@
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <body>
-<app-header></app-header>
-<div class="container-fluid">
-<router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
 </body>
+
+</html>
