--- a/Budfirmex/src/app/shared/components/user-profile/user-profile.component.html
+++ b/Budfirmex/src/app/shared/components/user-profile/user-profile.component.html
@@ -3,9 +3,9 @@
 </button>
 
 <div class="collapse navbar-collapse" id="user-profile">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav navbar-right">
         <li class="navbar-item">
-
+            <a class="nav-link" href="#">Wyloguj się</a>
         </li>
     </ul>
 </div>
