--- a/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.scss
+++ b/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.scss
@@ -1,4 +1,9 @@
-.table-head{
-    font-family: Montserrat;
-    color: rgba(0, 0, 0, 0.4);
+.my-buildings-title {
+  margin: 24px 0;
 }
+  
+.table-margin {
+  display: block;
+  padding: 16px 24px;
+}
+  
