--- a/Budfirmex/src/app/root/components/header/header.component.html
+++ b/Budfirmex/src/app/root/components/header/header.component.html
@@ -1,9 +1,4 @@
-<header>
-  <nav class="navbar navbar-light bd-color navbar-expand-md">
-    <div class="navbar-brand bd-brand">Budfirmex</div>
-      
-    <app-user-profile></app-user-profile>
-
-  </nav>
-
+<header class="header">
+  <div class="header__company-name" [routerLink]="['/']">Budfirmex</div>
+  <app-user-profile></app-user-profile>
 </header>
