--- a/Budfirmex/src/app/root/components/header/header.component.scss
+++ b/Budfirmex/src/app/root/components/header/header.component.scss
@@ -1,11 +1,22 @@
+@import "variables";
 
-.bd-color{
-    background-color: #FFC700;
-}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $color-yellow;
+  height: 64px;
+  padding: 0 24px;
 
-.bd-brand{
-    margin-left: 10px;
-    font-family: Roboto;
-    font-style: normal;
+  &__company-name {
+    cursor: pointer;
     font-size: 24px;
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
+    color: rgba($color-black, 0.9);
+
+    &:hover {
+      opacity: 0.75;
+    }
+  }
 }
