breadcrumbs component, first repository, building page

--- a/Budfirmex/src/app/buildings/components/building-details/building-details.component.html
+++ b/Budfirmex/src/app/buildings/components/building-details/building-details.component.html
@@ -1,27 +1,1 @@
-<div class="d-flex labels-building-details">
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead>
-            <tr>
-                <th>Numer budowy</th>
-                <th>Nazwa drogi</th>
-                <th>Planowana data rozpoczęcia</th>
-                <th>Faktyczna data rozpoczęcia</th>
-                <th>Planowana data zakończenia</th>
-                <th>Faktyczna data zakończenia</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-    </div>
-</div>
-
+Building details view
