--- a/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.scss
+++ b/Budfirmex/src/app/dashboard/components/my-buildings/my-buildings.component.scss
@@ -1,9 +1,16 @@
 .my-buildings-title {
   margin: 24px 0;
+  font-size: 24px;
+  font-weight: bold;
 }
-  
+
 .table-margin {
   display: block;
   padding: 16px 24px;
+
+  tr {
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
-  
