add report details, building details

--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.scss
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.scss
@@ -1,12 +1,17 @@
-.title-brigadereports{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
+.brigadereports-title {
+    margin: 24px 0;
     font-size: 24px;
-}
-
-.table-head{
-    font-family: Montserrat;
-    color: rgba(0, 0, 0, 0.4);
-}
+    font-weight: bold;
+  }
+  .table-margin {
+    display: block;
+    padding: 16px 24px;
+  
+    tr {
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  
 
