--- a/Budfirmex/src/app/buildings/components/stuff/stuff.component.html
+++ b/Budfirmex/src/app/buildings/components/stuff/stuff.component.html
@@ -1,5 +1,6 @@
+<div class="container-fluid">
 <app-stuff-modal></app-stuff-modal>
-<p class="title-stuff my-3">Materiały</p>
+<h2 class="stuff-title">Materiały</h2>
 <div class="table-responsive">
     <table class="table table-borderless">
         <thead class="table-head">
@@ -13,7 +14,9 @@
             <tr>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
         </tbody>
     </table>
+</div>
 </div>
