--- a/Budfirmex/src/app/buildings/components/workers/workers.component.html
+++ b/Budfirmex/src/app/buildings/components/workers/workers.component.html
@@ -1,5 +1,6 @@
+<div class="container-fluid">
 <app-worker-modal></app-worker-modal>
-<p class="title-workers my-3">Robotnicy</p>
+<h2 class="workers-title">Robotnicy</h2>
 <div class="table-responsive">
     <table class="table table-borderless">
         <thead class="table-head">
@@ -17,4 +18,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
