--- a/Budfirmex/src/app/buildings/components/works/works.component.html
+++ b/Budfirmex/src/app/buildings/components/works/works.component.html
@@ -1,5 +1,6 @@
+<div class="container-fluid">
 <app-work-modal></app-work-modal>
-<p class="title-works my-3">Roboty</p>
+<h2 class="works-title">Roboty</h2>
 <div class="table-responsive">
     <table class="table table-borderless">
         <thead class="table-head">
@@ -21,4 +22,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
