--- a/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
@@ -1,20 +1,18 @@
-<main>
-    <div class="container-fluid">
-        <div class="row my-3">
-            <div class="col-md-12 bg-white rounded">
-                <app-report-details></app-report-details>
-            </div>
-        </div>
-        <div class="row my-3 justify-content-around">
-            <div class="col-md-4 bg-white rounded">
-                <app-workers></app-workers>
-            </div>
-            <div class="col-md-4 bg-white rounded">
-                <app-works></app-works>
-            </div>
-            <div class="col-md-4 bg-white rounded">
-                <app-stuff></app-stuff>
-            </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <app-report-details></app-report-details>
         </div>
     </div>
-</main>
+    <div class="row my-3">
+        <div class="col-4 bg-white rounded">
+            <app-workers></app-workers>
+        </div>
+        <div class="col-4 bg-white rounded">
+            <app-works></app-works>
+        </div>
+        <div class="col-4 bg-white rounded">
+            <app-stuff></app-stuff>
+        </div>
+    </div>
+</div>
