--- a/Budfirmex/src/app/buildings/pages/machines-report/machines-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/machines-report/machines-report.component.html
@@ -1,17 +1,15 @@
-<main>
-    <div class="container-fluid">
+<div class="container-fluid">
         <div class="row my-3">
-            <div class="col-md-12 bg-white rounded">
+            <div class="col-12 bg-white rounded">
                 <app-report-details></app-report-details>
             </div>
         </div>
         <div class="row my-3">
-            <div class="col-md-4 bg-white rounded">
+            <div class="col-4 bg-white rounded">
                 <app-operators></app-operators>
             </div>
-            <div class="col-md-8 bg-white rounded">
+            <div class="col-8 bg-white rounded">
                 <app-machines></app-machines>
             </div>
         </div>
     </div>
-</main>
