--- a/Budfirmex/src/styles/styles.scss
+++ b/Budfirmex/src/styles/styles.scss
@@ -2,3 +2,6 @@
 @import "common";
 @import "buttons";
 @import "_material";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
