--- a/Budfirmex/src/app/buildings/components/comments/comments.component.html
+++ b/Budfirmex/src/app/buildings/components/comments/comments.component.html
@@ -1,25 +1,29 @@
+<div class="container-fluid">
 <button type="button" class="btn btn-warning float-end"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
         fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
         <path
             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
     </svg>
 </button>
-<p class="title-comments my-3">Uwagi</p>
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead class="table-head">
-            <tr>
-                <th>Numer raportu</th>
-                <th>Sporządził</th>
-                <th>Akcja</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
+<h2 class="comments-title">Uwagi</h2>
+<mat-tab-group class="mt-2 mb-2">
+    <div class="white-background table-margin">
+        <table>
+            <thead>
+                <tr>
+                    <td>Numer budowy</td>
+                    <td>Nazwa drogi</td>
+                    <td>Data rozpoczęcia</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</mat-tab-group>
 </div>
