--- a/Budfirmex/src/app/buildings/components/report-details/report-details.component.html
+++ b/Budfirmex/src/app/buildings/components/report-details/report-details.component.html
@@ -1,24 +1,22 @@
-<div class="d-flex labels-report-details">
-    <div class="table-responsive">
-        <table class="table table-borderless">
-            <thead>
-                <tr>
-                    <th>Numer budowy</th>
-                    <th>Nazwa drogi</th>
-                    <th>Data raportu</th>
-                    <th>Pogoda</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><select><option></option></select></td>
-                </tr>
-            </tbody>
-        </table>
+<div class="container-fluid">
+    <div class="white-container report-details">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="report-details__label">Numer budowy</div>
+                <div class="report-details__value">{{ buildNumber }}</div>
+            </div>
+            <div class="col-md-3">
+                    <div class="report-details__label--small">Nazwa drogi</div>
+                    <div class="report-details__value--small">{{ roadName }}</div>
+            </div>
+            <div class="col-md-3">
+                <div class="report-details__label--small">Data raportu</div>
+                <div class="report-details__value--small">{{ reportDate | date}}</div>
+            </div>
+            <div class="col-md-3">
+                <div class="report-details__label--small">Pogoda</div>
+                <div class="report-details__value--small"><select><option></option></select></div>
+            </div>
         </div>
     </div>
-    
-    
+</div>
