--- a/Budfirmex/src/app/buildings/pages/daily-report/daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/daily-report/daily-report.component.html
@@ -1,20 +1,14 @@
-<main>
-    <div class="container-fluid">
-        <div class="row my-3">
-            <div class="col-md-12 bg-white rounded">
-                <app-report-details></app-report-details>
-            </div>
+
+<app-report-details></app-report-details>
+
+    <div class="row my-3">
+        <div class="col-4 bg-white">
+            <app-brigade-reports></app-brigade-reports>
         </div>
-        <div class="row my-3 justify-content-around">
-            <div class="col-md-4 bg-white rounded">
-                <app-brigade-reports></app-brigade-reports>
-            </div>
-            <div class="col-md-4 bg-white rounded">
-                <app-machine-reports></app-machine-reports>
-            </div>
-            <div class="col-md-4 bg-white rounded">
-                <app-comments></app-comments>
-            </div>
+        <div class="col-4 bg-white">
+            <app-machine-reports></app-machine-reports>
+        </div>
+        <div class="col-4 bg-white">
+            <app-comments></app-comments>
         </div>
     </div>
-</main>
