--- a/Budfirmex/src/app/buildings/components/stuff/stuff.component.html
+++ b/Budfirmex/src/app/buildings/components/stuff/stuff.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 <app-stuff-modal></app-stuff-modal>
 <h2 class="stuff-title">Materiały</h2>
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead class="table-head">
+<div class="white-background table-margin">
+    <table>
+        <thead>
             <tr>
                 <th>Lp.</th>
                 <th>Materiał</th>
