--- a/Budfirmex/src/app/buildings/components/workers/workers.component.html
+++ b/Budfirmex/src/app/buildings/components/workers/workers.component.html
@@ -1,22 +1,22 @@
 <div class="container-fluid">
-<app-worker-modal></app-worker-modal>
-<h2 class="workers-title">Robotnicy</h2>
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead class="table-head">
-            <tr>
-                <th>Lp.</th>
-                <th>Imię i nazwisko</th>
-                <th>Akcja</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+    <app-worker-modal></app-worker-modal>
+    <h2 class="workers-title">Robotnicy</h2>
+    <div class="white-background table-margin">
+        <table>
+            <thead>
+                <tr>
+                    <th>Lp.</th>
+                    <th>Imię i nazwisko</th>
+                    <th>Akcja</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
