--- a/Budfirmex/src/app/buildings/modals/comments/comment-modal.component.html
+++ b/Budfirmex/src/app/buildings/modals/comments/comment-modal.component.html
@@ -8,7 +8,7 @@
     <div class="modal-body">
       <form>
         <div class="form-group">
-          <label for="remarks">Example textarea</label>
+          <label for="remarks">Wpisz uwagi</label>
           <textarea class="form-control" id="remarks" rows="3"></textarea>
         </div>
       </form>
@@ -17,3 +17,10 @@
       <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Zapisz</button>
     </div>
   </ng-template>
+
+  <button type="button" class="btn btn-warning float-end" (click)="open(content)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+    fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+    <path
+        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+</svg>
+</button>
