--- a/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
@@ -5,13 +5,13 @@
         </div>
     </div>
     <div class="row my-3">
-        <div class="col-4 bg-white rounded">
+        <div class="col-4">
             <app-workers></app-workers>
         </div>
-        <div class="col-4 bg-white rounded">
+        <div class="col-4">
             <app-works></app-works>
         </div>
-        <div class="col-4 bg-white rounded">
+        <div class="col-4">
             <app-stuff></app-stuff>
         </div>
     </div>
