--- a/Budfirmex/src/app/buildings/pages/daily-report/daily-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/daily-report/daily-report.component.html
@@ -1,14 +1,18 @@
-
-<app-report-details></app-report-details>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <app-report-details></app-report-details>
+        </div>
+    </div>
     <div class="row my-3">
-        <div class="col-4 bg-white">
+        <div class="col-4">
             <app-brigade-reports></app-brigade-reports>
         </div>
-        <div class="col-4 bg-white">
+        <div class="col-4">
             <app-machine-reports></app-machine-reports>
         </div>
-        <div class="col-4 bg-white">
+        <div class="col-4">
             <app-comments></app-comments>
         </div>
     </div>
+</div>
