--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
@@ -6,14 +6,14 @@
     </svg>
 </button>
 <h2 class="brigadereports-title">Brygady - raporty dzienne</h2>
-<mat-tab-group class="mt-2 mb-2">
+<div class="table">
     <div class="white-background table-margin">
         <table>
             <thead>
                 <tr>
-                    <td>Numer budowy</td>
-                    <td>Nazwa drogi</td>
-                    <td>Data rozpoczęcia</td>
+                    <td>Numer raporu</td>
+                    <td>Sporządził</td>
+                    <td>Akcja</td>
                 </tr>
             </thead>
             <tbody>
@@ -25,5 +25,5 @@
             </tbody>
         </table>
     </div>
-</mat-tab-group>
+</div>
 </div>
