--- a/Budfirmex/src/app/buildings/components/machines/machines.component.html
+++ b/Budfirmex/src/app/buildings/components/machines/machines.component.html
@@ -1,8 +1,9 @@
+<div class="container-fluid">
 <app-machine-modal></app-machine-modal>
-<p class="title-machines my-3">Maszyny</p>
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead class="table-head">
+<p class="machines-title my-3">Maszyny</p>
+<div class="white-background table-margin">
+    <table>
+        <thead>
             <tr>
                 <th>Lp.</th>
                 <th>Numer maszyny</th>
@@ -21,4 +22,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
