--- a/Budfirmex/src/app/buildings/components/operators/operators.component.html
+++ b/Budfirmex/src/app/buildings/components/operators/operators.component.html
@@ -1,8 +1,9 @@
+<div class="container-fluid">
 <app-operator-modal></app-operator-modal>
-<p class="title-operators my-3">Operatorzy</p>
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead class="table-head">
+<p class="operators-title my-3">Operatorzy</p>
+<div class="white-background table-margin">
+    <table>
+        <thead>
             <tr>
                 <th>Lp.</th>
                 <th>Imię i nazwisko</th>
@@ -17,4 +18,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
