--- a/Budfirmex/src/app/buildings/components/works/works.component.html
+++ b/Budfirmex/src/app/buildings/components/works/works.component.html
@@ -1,26 +1,26 @@
 <div class="container-fluid">
-<app-work-modal></app-work-modal>
-<h2 class="works-title">Roboty</h2>
-<div class="table-responsive">
-    <table class="table table-borderless">
-        <thead class="table-head">
-            <tr>
-                <th>Lp.</th>
-                <th>Typ roboty</th>
-                <th>Jednostka</th>
-                <th>Ilość</th>
-                <th>Akcja</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+    <app-work-modal></app-work-modal>
+    <h2 class="works-title">Roboty</h2>
+    <div class="white-background table-margin">
+        <table>
+            <thead>
+                <tr>
+                    <th>Lp.</th>
+                    <th>Typ roboty</th>
+                    <th>Jednostka</th>
+                    <th>Ilość</th>
+                    <th>Akcja</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
