--- a/Budfirmex/src/app/buildings/pages/machines-report/machines-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/machines-report/machines-report.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
-        <div class="row my-3">
-            <div class="col-12 bg-white rounded">
+        <div class="row">
+            <div class="col-12">
                 <app-report-details></app-report-details>
             </div>
         </div>
         <div class="row my-3">
-            <div class="col-4 bg-white rounded">
+            <div class="col-4">
                 <app-operators></app-operators>
             </div>
-            <div class="col-8 bg-white rounded">
+            <div class="col-8">
                 <app-machines></app-machines>
             </div>
         </div>
