--- a/Budfirmex/src/app/login/components/login/login.component.html
+++ b/Budfirmex/src/app/login/components/login/login.component.html
@@ -17,7 +17,7 @@
                             <a href="#" class="btn btn-link">Nie pamiętam hasła</a>
                         </div>
                         <div class="text-center">
-                            <button type="submit" id="login" class="btn btn-warning my-3">Zaloguj się</button>
+                            <button type="submit" id="login" class="btn btn-warning my-3" (click)="btnClick()">Zaloguj się</button>
                         </div>
                     </form>
                 </div>
