--- a/Budfirmex/src/app/login/components/login/login.component.html
+++ b/Budfirmex/src/app/login/components/login/login.component.html
@@ -2,23 +2,54 @@
     <div class="row justify-content-center align-items-center m-5">
         <div class="col-6">
             <div class="card">
-                <div class="card-header"><p class="mb-3 logo text-center">Budfirmex</p></div>
+                <div class="card-header">
+                    <p class="mb-3 logo text-center">Budfirmex</p>
+                </div>
                 <div class="card-body">
-                    <form>
+                    <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm"
+                        novalidate>
+
                         <div class="form-group">
-                            <label for="Email" class="col-md-6">Adres e-mail</label>
-                            <input type="email" id="Email" class="form-control col-md-6" required>
+                            <label for="email" class="col-md-6">Adres e-mail</label>
+                            <input type="email" name="email" class="form-control col-md-6" [(ngModel)]="form.email"
+                                required email #email="ngModel">
                         </div>
+
+                        <div class="alert-danger" *ngIf="f.submitted && email.invalid">
+                            <div *ngIf="email.errors.required">Email jest wymagany</div>
+                            <div *ngIf="email.errors.email">
+                                Podaj właściwy adres e-mail
+                            </div>
+                        </div>
+
                         <div class="form-group">
-                            <label for="Password" class="col-md-6">Hasło</label>
-                            <input type="password" id="Password" class="form-control col-md-6" required>
+                            <label for="password" class="col-md-6">Hasło</label>
+                            <input type="password" name="password" class="form-control col-md-6"
+                                [(ngModel)]="form.password" required minlength="6" #password="ngModel">
                         </div>
+
+                        <div class="alert alert-danger" role="alert" *ngIf="f.submitted && password.invalid">
+                            <div *ngIf="password.errors.required">Hasło jest wymagane</div>
+                            <div *ngIf="password.errors.minlength">
+                                Hasło musi mieć min 6 znaków.
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <a href="#" class="btn btn-link">Nie pamiętam hasła</a>
                         </div>
+
                         <div class="text-center">
-                            <button type="submit" id="login" class="btn btn-warning my-3" (click)="btnClick()">Zaloguj się</button>
+                            <button type="submit" id="login" class="btn btn-warning my-3">Zaloguj
+                                się</button>
                         </div>
+
+                        <div class="form-group">
+                            <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
+                                Błąd logowania: {{ errorMessage }}
+                            </div>
+                        </div>
+
                     </form>
                 </div>
             </div>
