--- a/Budfirmex/src/app/login/modals/registration/registration-modal.component.html
+++ b/Budfirmex/src/app/login/modals/registration/registration-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-modal>
   <div class="modal-header">
-    <div class="modal-title" id="modal-basic-title">
+    <div class="modal-title" name="modal-basic-title">
       <h4>Dodaj nowe konto użytkownika</h4>
       <h5>Uzupełnij zestaw danych dotyczących nowego użytkownika</h5>
     </div>
@@ -9,51 +9,93 @@
     </button>
   </div>
   <div class="modal-body">
-    <form>
+
+    <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+
       <div class="form-group">
         <label for="name_reg">Imię użytkownika</label>
-        <input type="text" id="name_reg" class="form-control" required>
+        <input type="text" name="name_reg" class="form-control" required>
       </div>
+
       <div class="form-group">
         <label for="surname_reg">Nazwisko użytkownika</label>
-        <input type="text" id="surname_reg" class="form-control" required>
+        <input type="text" name="surname_reg" class="form-control" required>
       </div>
+
       <div class="form-group">
-        <label for="email_reg">Adres e-mail</label>
-        <input type="email" id="email_reg" class="form-control" required>
+        <label for="email">Adres e-mail</label>
+        <input type="email" name="email" class="form-control" [(ngModel)]="form.email" required email #email="ngModel">
       </div>
+
+      <div class="alert-danger" *ngIf="f.submitted && email.invalid">
+        <div *ngIf="email.errors.required">Email jest wymagany</div>
+        <div *ngIf="email.errors.email">
+          Podaj właściwy adres e-mail
+        </div>
+      </div>
+
       <div class="form-group">
-        <label for="name_reg">Nazwa użytkownika</label>
-        <input type="text" id="name_reg" class="form-control" required>
+        <label for="username">Nazwa użytkownika</label>
+        <input type="text" name="username" class="form-control" [(ngModel)]="form.username" required minlength="3"
+          maxlength="20" #username="ngModel">
       </div>
+
+      <div class="alert-danger" *ngIf="f.submitted && username.invalid">
+        <div *ngIf="username.errors.required">Nazwa użytkownika jest wymagana</div>
+        <div *ngIf="username.errors.minlength">
+          Nazwa użytkownika musi mieć więcej niż 3 znaki
+        </div>
+        <div *ngIf="username.errors.maxlength">
+          Nazwa użytkownika może mieć max. 20 znaków
+        </div>
+      </div>
+
       <div class="form-group">
-        <label for="password_reg">Hasło</label>
-        <input type="password" id="password_reg" class="form-control" required>
+        <label for="password">Hasło</label>
+        <input type="password" name="password" class="form-control" [(ngModel)]="form.password" required minlength="6"
+          #password="ngModel">
       </div>
+
+      <div class="alert-danger" *ngIf="f.submitted && password.invalid">
+        <div *ngIf="password.errors.required">Hasło jest wymagane</div>
+        <div *ngIf="password.errors.minlength">
+          Hasło musi mieć więcej niż 6 znaków
+        </div>
+      </div>
+
       <div class="form-group">
-        <label for="password2_reg">Hasło</label>
-        <input type="password" id="password2_reg" class="form-control" required>
+        <label for="number_reg">Numer telefonu</label>
+        <input type="text" name="number_reg" class="form-control" required>
       </div>
-      <div class="form-group">
-        <label for="number_reg">Nazwa użytkownika</label>
-        <input type="text" id="number_reg" class="form-control" required>
-      </div>
+
       <div class="form-group">
         <label for="number_perm_reg">Numer uprawnień</label>
-        <input type="text" id="number_perm_reg" class="form-control" required>
+        <input type="text" name="number_perm_reg" class="form-control" required>
       </div>
+
       <p>Rola użytkownika</p>
+
       <div class="form-group form-check form-check-inline">
-        <input class="form-check-input" type="radio" id="manager_user_role" value="Kierownik">
+        <input class="form-check-input" type="radio" name="manager_user_role" value="Kierownik">
         <label class="form-check-label" for="manager_user_role">Kierownik</label>
       </div>
+
       <div class="form-group form-check form-check-inline">
-        <input class="form-check-input" type="radio" id="engineer_user_role" value="Inżynier">
+        <input class="form-check-input" type="radio" name="engineer_user_role" value="Inżynier">
         <label class="form-check-label" for="engineer_user_role">Inżynier</label>
       </div>
     </form>
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Zapisz</button>
-  </div>
+
+    <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+      Rejestracja powiodła się!<br />{{ errorMessage }}
+    </div>
+    </form>
+
+    <div class="alert alert-success" *ngIf="isSuccessful">
+      Rejestracja nie powiodła się!
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark">Zapisz</button>
+    </div>
 </ng-template>
