--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
@@ -17,9 +17,9 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
+                <tr *ngFor="let dailyReports of dailyReport">
+                    <td>{{dailyReports.reportNumber}}</td>
+                    <td>{{dailyReports.drafted}}</td>
                     <td></td>
                 </tr>
             </tbody>
