--- a/Budfirmex/src/app/buildings/components/comments/comments.component.html
+++ b/Budfirmex/src/app/buildings/components/comments/comments.component.html
@@ -1,24 +1,24 @@
 <div class="container-fluid">
     <app-comment-modal></app-comment-modal>
-<h2 class="comments-title">Uwagi</h2>
-<div class="table">
-    <div class="white-background table-margin">
-        <table>
-            <thead>
-                <tr>
-                    <td>Numer raporu</td>
-                    <td>Sporządził</td>
-                    <td>Akcja</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+    <h2 class="comments-title">Uwagi</h2>
+    <div class="table">
+        <div class="white-background table-margin">
+            <table>
+                <thead>
+                    <tr>
+                        <td>Numer raportu</td>
+                        <td>Sporządził</td>
+                        <td>Akcja</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let dailyReports of dailyReport">
+                        <td>{{dailyReports.reportNumber}}</td>
+                        <td>{{dailyReports.drafted}}</td>
+                        <td><button class="btn btn-sm btn-warning">Edytuj</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 </div>
