--- a/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
@@ -1,4 +1,11 @@
 <div class="container-fluid">
+
+    <div class="row">
+        <div class="col-12">
+          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
+        </div>
+      </div>
+
     <div class="row">
         <div class="col-12">
             <app-report-details></app-report-details>
